Legend Changes and Removed Instructions

--- a/index.html
+++ b/index.html
@@ -133,13 +133,14 @@
             <span class="material-symbols-outlined">share</span>
           </button>
 
-          <div class="legend">
-            <p class="legend-title">Degrees</p>
-            <div id="legend-items" class="legend-items"></div>
-          </div>
-
-          <div class="instructions">
-            Drag start/end nodes<br>Scroll to zoom
+          <div class="legend collapsed">
+            <button type="button" id="legend-toggle" class="legend-toggle" title="Toggle legend">
+              <span class="material-symbols-outlined">info</span>
+            </button>
+            <div class="legend-content">
+              <p class="legend-title">Degrees</p>
+              <div id="legend-items" class="legend-items"></div>
+            </div>
           </div>
         </div>
       </div>
