--- a/index.html
+++ b/index.html
@@ -212,6 +212,13 @@
     <div class="loading-content">
       <div class="spinner"></div>
       <p>Loading books...</p>
+      <p class="loading-subtext">This may take up to a minute. Please wait!</p>
+      <div class="progress-container">
+        <div class="progress-bar">
+          <div id="loading-progress-bar" class="progress-fill"></div>
+        </div>
+        <p id="loading-progress-text" class="progress-text">0%</p>
+      </div>
     </div>
   </div>
 
