--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header class="header">
       <div class="container">
         <h1 class="title">
-          <a href="https://aidan-labs.github.io/Degrees-of-Books/" style="color: inherit; text-decoration: none;">Degrees of Books</a>
+          <a href="https://aidan-labs.github.io/degrees-of-books/" style="color: inherit; text-decoration: none;">Degrees of Books</a>
         </h1>
 
-        <a href="https://github.com/aidan-labs/Degrees-of-Books" target="_blank" rel="noopener noreferrer" class="github-link">
+        <a href="https://aidan-labs.github.io/degrees-of-books/" target="_blank" rel="noopener noreferrer" class="github-link">
           GitHub
         </a>
 
