--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="https://aidan-labs.github.io/degrees-of-books/" style="color: inherit; text-decoration: none;">Degrees of Books</a>
         </h1>
 
-        <a href="https://aidan-labs.github.io/degrees-of-books/" target="_blank" rel="noopener noreferrer" class="github-link">
+        <a href="https://github.com/aidan-labs/degrees-of-books" target="_blank" rel="noopener noreferrer" class="github-link">
           GitHub
         </a>
 
